--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,14 @@
 #---------------------------------------------------------------------------
 #Hibernate
-#hibernate.ejb.naming_strategy= org.hibernate.cfg.EJB3NamingStrategy
-#hibernate.show_sql = false
-#hibernate.format_sql = false
-#hibernate.connection.charSet = UTF-8
-#hibernate.connection.characterEncoding = UTF-8
-#hibernate.connection.useUnicode = true
-#hibernate.jdbc.batch_size = 50
-#hibernate.hbm2ddl.auto = update
-
-#spring.jpa.hibernate.ddl-auto = create
-#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+hibernate.ejb.naming_strategy= org.hibernate.cfg.EJB3NamingStrategy
+hibernate.show_sql = false
+hibernate.format_sql = false
+hibernate.connection.charSet = UTF-8
+hibernate.connection.characterEncoding = UTF-8
+hibernate.connection.useUnicode = true
+hibernate.jdbc.batch_size = 50
+hibernate.hbm2ddl.auto = update
+hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #---------------------------------------------------------------------------
 #Datasource
@@ -20,5 +17,3 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/lucas?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
-
-spring.jpa.hibernate.ddl-auto=create-drop
